--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
   <div class="box"></div>
   <div class="box1"></div>
   <!-- 浏览器无法直接使用es6 语法 -->
-  <script src="../dist/static/js/main.js"></script>
+   <!-- 手动引入，不太方便， 直接使用插件自动引入 -->
+  <!-- <script src="../dist/static/js/main.js"></script> -->
   <i class="iconfont icon-zuobiao"></i>
 </body>
 </html>
