--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,6 @@
    <!-- 手动引入，不太方便， 直接使用插件自动引入 -->
   <!-- <script src="../dist/static/js/main.js"></script> -->
   <i class="iconfont icon-zuobiao"></i>
+  <img src="../src/image/123.jpg"/>
 </body>
 </html>
