--- a/public/index.html
+++ b/public/index.html
@@ -14,5 +14,13 @@
   <!-- <script src="../dist/static/js/main.js"></script> -->
   <i class="iconfont icon-zuobiao"></i>
   <img src="../src/image/123.jpg"/>
+
+  <button id="sum">按钮</button>
+
+  <script>
+    document.getElementById("sum").onClick = function() {
+      console.log(11111)
+    }
+  </script>
 </body>
 </html>
